k8s/arr-stack/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: readarr
        image: linuxserver/readarr:develop
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: config
        hostPath:
          path: /var/lib/docker/volumes/readarr_data/_data
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
      - name: downloads
        hostPath:
          path: /storage/downloads
          type: Directory
